--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Insider Hack Gaming</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <h1>Insider Hack Gaming</h1>
   <p>Améliore ton skill FPS</p>
+
 </body>
 </html>
