--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Insider Hack Gaming</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      background: #0b0b0b;
+      color: #eaeaea;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+    h1 {
+      margin-top: 120px;
+      color: #ff2a2a;
+    }
+    p {
+      font-size: 1.2rem;
+    }
+  </style>
 </head>
 <body>
 
