--- a/index.html
+++ b/index.html
@@ -12,11 +12,26 @@
       text-align: center;
     }
     h1 {
-      margin-top: 120px;
+      margin-top: 100px;
       color: #ff2a2a;
     }
     p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+    }
+    .btn {
+      display: inline-block;
+      margin: 10px;
+      padding: 15px 25px;
+      background: #1c1c1c;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      border: 1px solid #ff2a2a;
+    }
+    .btn:hover {
+      background: #ff2a2a;
+      color: #000;
     }
   </style>
 </head>
@@ -24,6 +39,18 @@
 
   <h1>Insider Hack Gaming</h1>
   <p>Améliore ton skill FPS</p>
+
+  <a class="btn" href="https://www.youtube.com/@InsiderHackGaming" target="_blank">
+    📺 YouTube
+  </a>
+
+  <a class="btn" href="#" target="_blank">
+    💬 Discord
+  </a>
+
+  <a class="btn" href="#">
+    📘 Tutos & Astuces
+  </a>
 
 </body>
 </html>
